--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,7 +1,9 @@
 name: LinkedIn Scraper
 
 on:
-  workflow_dispatch: # Allows you to click a button to run manually
+  schedule:
+    - cron: '0 0 * * *'   # example: runs daily at midnight
+  workflow_dispatch:      # allows manual trigger
 
 permissions:
   contents: write
